# jgpg

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cgr.toml  jgpg.pest  package.nix
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  post-create-command.sh  post-start-command.sh
.github/workflows/: realease.yaml
docs/_readme/: install.md  intro.md  usage.md
src/: lib.rs  main.rs
