[package]
name = "jgpg"
version = "0.1.0"
edition = "2024"
authors = ["Arinze Chianumba"]
readme = "README.md"
repository = "https://github.com/achianumba/jgpg"
license-file = "LICENSE"
description = "A Rust binary and library for converting gpg --list-keys (apt-key list etc.) output to JSON in DevOps, CI/CD pipelines."

keywords = [
  "jgpg",
  "jgpgson",
  "gpg2json",
  "gpglist2json"
]

categories = [ "command-line-utilities" ]

[dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
